# FluxFile

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  files.py  fs.py  health.py  signaling.py
backend/app/core/: __init__.py  config.py  dependencies.py  logging.py
backend/app/integrations/: __init__.py  webdav.py
backend/app/services/: __init__.py  filesystem.py
backend/app/utils/: __init__.py  responses.py
cpp_src/: CMakeLists.txt  blake3.h  fast_fs.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: FilePanel.tsx  P2PTransferPanel.tsx  VirtualFileTable.tsx
frontend/src/hooks/: useLocalFileSystem.ts  useWebRTC.ts
frontend/src/layouts/: CommanderLayout.tsx
frontend/src/stores/: fileStore.ts
frontend/src/styles/: index.css
frontend/src/types/: file-system-access.d.ts  index.ts
frontend/src/utils/: cn.ts
scripts/: build.sh
