# ============================================================================
# FluxFile - pyproject.toml
# ============================================================================
# 现代 Python 项目配置文件，符合 PEP 517/518 标准

[build-system]
# 构建依赖
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10.0",
    "cmake>=3.16",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "fluxfile"
version = "1.0.0"
description = "高性能内网文件传输系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "FluxFile Team", email = "fluxfile@example.com" }
]
keywords = [
    "file-transfer",
    "webrtc",
    "high-performance",
    "fastapi",
    "pybind11",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: System :: Filesystems",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "redis>=4.5.0",
    "clickhouse-driver>=0.2.5",
    "casbin>=1.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiortc>=1.6.0",  # WebRTC
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
    "pre-commit>=3.0.0",
]

ldap = [
    "python-ldap>=3.4.0",
]

full = [
    "fluxfile[dev,ldap]",
]

[project.urls]
Homepage = "https://github.com/fluxfile/fluxfile"
Documentation = "https://fluxfile.readthedocs.io"
Repository = "https://github.com/fluxfile/fluxfile.git"
Changelog = "https://github.com/fluxfile/fluxfile/blob/main/CHANGELOG.md"

[project.scripts]
fluxfile = "app.main:cli"

# ============================================================================
# 工具配置
# ============================================================================

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]

# Black 代码格式化配置
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | cpp_src/third_party
)/
'''

# isort 导入排序配置
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", ".venv", "node_modules", "cpp_src/third_party"]

# Ruff 代码检查配置
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

# MyPy 类型检查配置
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest 配置
[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests", "backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage 配置
[tool.coverage.run]
source = ["backend/app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
